--- a/index.html
+++ b/index.html
@@ -55,21 +55,21 @@
                             <a class="project-link" href="https://github.com/Chypas/Projects/tree/main/HW_12">Personal
                                 assistant (CLI)</a>
                             <span
-                                class="project-item-description">...............................................................................[
+                                class="project-item-description">............................................................................................[
                                 Python ]</span>
                         </li>
                         <li class="project-item">
                             <a class="project-link" href="https://github.com/Chypas/Projects/tree/main/pygame">Game
                                 Bandero Goose</a>
                             <span
-                                class="project-item-description">...................................................................................[
+                                class="project-item-description">...............................................................................................[
                                 Python ]</span>
                         </li>
                         <li class="project-item">
                             <a class="project-link" href="https://github.com/Chypas/WEB_GOIT">Personal assistant
                                 (WEB)</a>
                             <span
-                                class="project-item-description">.........................................................[
+                                class="project-item-description">.............................................................[
                                 FastAPI, MongoDB ]</span>
                         </li>
                     </ol>
