--- a/index_ukr.html
+++ b/index_ukr.html
@@ -29,46 +29,44 @@
                 <h2 class="my-profession">Розробник Python</h2>
                 <h1 class="my-name">Роман Овчаренко</h1>
                 <p class="about-me_text">Я високомотивований та відданий своїй справі професіонал із 8-річним досвідом
-                    в області
-                    інформаційні мережі. Маючи пристрасть до ІТ, я постійно прагнув розширювати свої знання та
-                    навичок, позиціонуючи себе як цінний актив у будь-якій організації.
+                    в області інформаційних технологій. Маючи пристрасть до ІТ, я постійно прагнув розширювати свої
+                    знання та навички, позиціонуючи себе як цінний актив у будь-якій організації.
                 </p>
                 <p class="about-me_text">
-                    У моїй нинішній ролі інженера інформаційних мереж я володію відповідними навичками та
-                    технології, ефективне управління проектами від початку до завершення. У мене перевірений трек
-                    запис про спільну роботу з міжфункціональними командами та зацікавленими сторонами, надання техн
-                    лідерство та впровадження інноваційних рішень складних проблем. Володіють відмінно
-                    комунікативні та міжособистісні навички, що дозволяє їм ефективно взаємодіяти з колегами,
-                    клієнтів і постачальників.
+                    У моїй нинішній ролі інженера інформаційних мереж, я володію відповідними навичками та
+                    знвннями, ефективне управління проектами від початку до завершення. Маю відмінні
+                    комунікативні та міжособистісні навички, що дозволяє ефективно взаємодіяти з колегами,
+                    клієнтами і постачальниками.
                 </p>
                 <p class="about-me_text">
-                    Як цілеспрямований і орієнтований на результат професіонал, я відданий своїй справі
-                    розвитку, залишаючись в курсі нових технологій і галузевих тенденцій. Захоплюється
-                    використовують технології для стимулювання зростання бізнесу та оптимізації продуктивності та завжди шукають щось нове
-                    можливості застосувати свій досвід.
+                    Як цілеспрямований і орієнтований на результат професіонал, відданий своїй справі, залишаючись в
+                    курсі нових технологій і галузевих тенденцій. Використовую технології для стимулювання зростання бізнесу та оптимізації 
+                    продуктивності, завжди шукаю щось нове, можливості застосувати свій досвід.
                 </p>
                 <!-- My projects -->
                 <div class="project-containers">
                     <h3 class="main-content-title">Проєкти</h3>
                     <ol class="project-list">
                         <li class="project-item">
-                            <a class="project-link" href="https://github.com/Chypas/Projects/tree/main/HW_12">Персональний помічник (CLI)</a>
+                            <a class="project-link"
+                                href="https://github.com/Chypas/Projects/tree/main/HW_12">Персональний помічник
+                                (CLI)</a>
                             <span
                                 class="project-item-description">...........................................................................[
                                 Python ]</span>
                         </li>
                         <li class="project-item">
-                            <a class="project-link" href="https://github.com/Chypas/Projects/tree/main/pygame">Гра Бандеро гусь</a>
+                            <a class="project-link" href="https://github.com/Chypas/Projects/tree/main/pygame">Гра
+                                Бандеро гусь</a>
                             <span
                                 class="project-item-description">..........................................................................................................[
                                 Python ]</span>
                         </li>
                         <li class="project-item">
-                            <a class="project-link" href="https://github.com/Chypas/WEB_GOIT">Персональний помічник (WEB)</a>
-                            <span
-                                class="project-item-description">...........................................[
-                                FastAPI, MongoDB ]</span
-                        </li>
+                            <a class="project-link" href="https://github.com/Chypas/WEB_GOIT">Персональний помічник
+                                (WEB)</a>
+                            <span class="project-item-description">...........................................[
+                                FastAPI, MongoDB ]</span </li>
                     </ol>
                 </div>
                 <!-- Work experience -->
